[tool.poetry]
package-mode = false
name = "file-converter"
version = "0.1.0"
description = ""
authors = ["Sam <sammeehansam@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.22.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
